--- a/index.html
+++ b/index.html
@@ -2,9 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home Assistant Zone YAML Helper</title>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css"
+          rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/litera/bootstrap.min.css" type="text/css"
+          rel="stylesheet">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script src="main.js"></script>
 </head>
 <body>
-
+<div class="container">
+    <h1>Zone Builder</h1>
+    <form onsubmit="download(this['name'].value+'.yaml', 'nothing')">
+        <fieldset>
+            <div class="form-group row">
+                <label class="col-form-label col-sm-3" for="area-name">Title:</label>
+                <input class="form-control col-sm-9" type="text" id="area-name" name="name" placeholder="Name of City or Area">
+            </div>
+            <fieldset class="form-group">
+                <legend>Build-a-zone</legend>
+                <div class="form-group row">
+                    <label class="col-form-label col-sm-3" for="zone-name">Name</label>
+                    <input class="form-control col-sm-9" id="zone-name" placeholder="Delivery Pad">
+                </div>
+                <div class="form-group row">
+                    <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
+                    <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
+                </div>
+                <div class="form-group row">
+                    <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
+                    <input class="form-control col-sm-9" id="radius" placeholder="50">
+                </div>
+                <button class="btn btn-danger" onclick="clearZone()">Clear</button>
+                <button class="btn btn-success" onclick="addZone()">Add</button>
+            </fieldset>
+            <hr>
+            <fieldset>
+                <legend>Generated YAML:</legend>
+                <pre class="form-control" id="generate-yaml"></pre>
+            </fieldset>
+        </fieldset>
+        <input class="btn btn-primary" type="submit" value="Download">
+    </form>
+</div>
 </body>
 </html>
