Fix 'icon not function' Move title input to bottom "Validate" title Add comment to generated yaml

--- a/index.html
+++ b/index.html
@@ -18,34 +18,33 @@
 <div class="container">
     <h1>Zone Builder</h1>
     <div>
-        <fieldset>
+        <fieldset class="form-group">
+            <legend>Build-a-zone</legend>
             <div class="form-group row">
-                <label class="col-form-label col-sm-3" for="area-name">Title:</label>
-                <input class="form-control col-sm-9" type="text" id="area-name" name="name" placeholder="Name of City or Area">
+                <label class="col-form-label col-sm-3" for="zone-name">Name</label>
+                <input class="form-control col-sm-9" id="zone-name" placeholder="Delivery Pad">
             </div>
-            <fieldset class="form-group">
-                <legend>Build-a-zone</legend>
-                <div class="form-group row">
-                    <label class="col-form-label col-sm-3" for="zone-name">Name</label>
-                    <input class="form-control col-sm-9" id="zone-name" placeholder="Delivery Pad">
-                </div>
-                <div class="form-group row">
-                    <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
-                    <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
-                </div>
-                <div class="form-group row">
-                    <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
-                    <input class="form-control col-sm-9" id="radius" placeholder="50">
-                </div>
-                <button class="btn btn-danger" onclick="clearZone()">Clear</button>
-                <button class="btn btn-success" onclick="addZone()">Add</button>
-            </fieldset>
+            <div class="form-group row">
+                <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
+                <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
+            </div>
+            <div class="form-group row">
+                <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
+                <input class="form-control col-sm-9" id="radius" placeholder="50">
+            </div>
+            <button class="btn btn-danger" onclick="clearZone()">Clear</button>
+            <button class="btn btn-success" onclick="addZone()">Add</button>
         </fieldset>
     </div>
 
     <hr>
     <div>
         <legend>Generated YAML:</legend>
+        <div class="form-group row">
+            <label class="col-form-label col-sm-3" for="area-name">Title:</label>
+            <input class="form-control col-sm-9" type="text" id="area-name" name="name"
+                   placeholder="Name of City or Area" onchange="validateTitle()">
+        </div>
         <pre style="clear: both" id="generated-yaml"></pre>
     </div>
     <button class="btn btn-primary" type="submit" onclick="download()">Download</button>
