Update title on page. Link to Home Assistant site.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Zone Builder</h1>
+    <h1>Zone Builder for <a href="https://home-assistant.io/">Home Assistant</a></h1>
     <div>
         <fieldset class="form-group">
             <legend>Build-a-zone</legend>
