--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <body>
 <div class="container">
     <h1>Zone Builder for <a href="https://home-assistant.io/">Home Assistant</a></h1>
+    <p>
+        Use this tool to help you generate a set of <a href="https://www.home-assistant.io/components/zone/">zones</a>
+        that you can use within Home Assistant for automation or record keeping.
+    </p>
     <div>
         <fieldset class="form-group">
             <legend>Build-a-zone</legend>
