Give ID to each form-group

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <div>
         <fieldset class="form-group">
             <legend>Build-a-zone</legend>
-            <div class="form-group row">
+            <div class="form-group row" id="zoneNameGroup">
                 <label class="col-form-label col-sm-3" for="zoneName">Name</label>
                 <input class="form-control col-sm-9" id="zoneName" placeholder="Delivery Pad">
             </div>
-            <div class="form-group row">
+            <div class="form-group row" id="latlongGroup">
                 <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
                 <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
             </div>
-            <div class="form-group row">
+            <div class="form-group row" id="radiusGroup">
                 <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
                 <input class="form-control col-sm-9" id="radius" placeholder="25">
             </div>
-            <div class="form-group row">
+            <div class="form-group row" id="iconGroup">
                 <label class="col-form-label col-sm-3" for="iconSelect">Icon</label>
                 <select class="form-control col-sm-9" id="iconSelect" value="mdi:pin-outline">
                     <option value="mdi:pin-outline">Location Pin</option>
