--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@
             <div class="form-group row" id="zoneNameGroup">
                 <label class="col-form-label col-sm-3" for="zoneName">Name</label>
                 <input class="form-control col-sm-9" id="zoneName" placeholder="Delivery Pad">
+                <div id="nameFeedback"></div>
             </div>
             <div class="form-group row" id="latlongGroup">
                 <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
                 <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
+                <div id="latlongFeedback"></div>
             </div>
             <div class="form-group row" id="radiusGroup">
                 <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
                 <input class="form-control col-sm-9" id="radius" placeholder="25">
+                <div id="radiusFeedback"></div>
             </div>
             <div class="form-group row" id="iconGroup">
                 <label class="col-form-label col-sm-3" for="iconSelect">Icon</label>
