--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <input class="form-control col-sm-9" id="zoneName" placeholder="Delivery Pad">
                 <div id="nameFeedback"></div>
             </div>
-            <div class="form-group row" id="latlongGroup">
+            <div class="form-group row justify-content-end" id="latlongGroup">
                 <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
                 <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
-                <div id="latlongFeedback"></div>
+                <div class="col-sm-9" id="latlongFeedback"></div>
             </div>
             <div class="form-group row" id="radiusGroup">
                 <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
