--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </select>
             </div>
             <button class="btn btn-danger" id="clearBtn">Clear</button>
-            <button class="btn btn-success" id="addBtn">Add</button>
+            <button class="btn btn-success" disabled="" id="addBtn">Add</button>
         </fieldset>
     </div>
 
