Align zone name feedback.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div>
         <fieldset class="form-group">
             <legend>Build-a-zone</legend>
-            <div class="form-group row" id="zoneNameGroup">
+            <div class="form-group row justify-content-end" id="zoneNameGroup">
                 <label class="col-form-label col-sm-3" for="zoneName">Name</label>
                 <input class="form-control col-sm-9" id="zoneName" placeholder="Delivery Pad">
                 <div id="nameFeedback"></div>
