Add office building to icon options.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <label class="col-form-label col-sm-3" for="iconSelect">Icon</label>
                 <select class="form-control col-sm-9" id="iconSelect" value="mdi:pin-outline">
                     <option value="mdi:pin-outline">Location Pin</option>
+                    <option value="mdi:office-building">Office</option>
                     <option value="mdi:store">Store</option>
                     <option value="mdi:gas-station">Gas Station</option>
                     <option value="mdi:silverware-fork-knife">Restaurant</option>
