--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div id="nameFeedback"></div>
             </div>
             <div class="form-group row justify-content-end" id="latlongGroup">
-                <label class="col-form-label col-sm-3" for="coordinates">Lat, Lon</label>
-                <input class="form-control col-sm-9" id="coordinates" placeholder="39.617190, -86.061363">
+                <label class="col-form-label col-sm-3" for="latlon">Lat, Lon</label>
+                <input class="form-control col-sm-9" id="latlon" placeholder="10.12345, -10.98765">
                 <div class="col-sm-9" id="latlongFeedback"></div>
             </div>
             <div class="form-group row" id="radiusGroup">
