Link to github repo.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <h1>Zone Builder for <a href="https://home-assistant.io/">Home Assistant</a></h1>
     <p>
         Use this tool to help you generate a set of <a href="https://www.home-assistant.io/components/zone/">zones</a>
-        that you can use within Home Assistant for automation or record keeping.
+        that you can use within Home Assistant for automation or record keeping. Visit the
+        <a href="https://github.com/nwesterhausen/zonefile-creator">Github Repo</a> to file an issue or take a look at
+        how it works!
     </p>
     <div>
         <fieldset class="form-group">
