Add a "use my location" button to fill in lat,lon

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <label class="col-form-label col-sm-3" for="latlon">Lat, Lon</label>
                 <input class="form-control col-sm-9" id="latlon" placeholder="10.12345, -10.98765">
                 <div class="col-sm-9" id="latlongFeedback"></div>
+                <button class="btn btn-sm btn-outline-primary" id="useCurrentLocation">Use my location</button>
             </div>
             <div class="form-group row" id="radiusGroup">
                 <label class="col-form-label col-sm-3" for="radius">Radius (m)</label>
