Spot to specify version number. Insert version into generated YAML. Specify version on main page.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Zone Builder for <a href="https://home-assistant.io/">Home Assistant</a></h1>
+    <h1>Zone Builder for <a href="https://home-assistant.io/">Home Assistant</a> v<span id="version_number">null</span></h1>
     <p>
         Use this tool to help you generate a set of <a href="https://www.home-assistant.io/components/zone/">zones</a>
         that you can use within Home Assistant for automation or record keeping. Visit the
