--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="col-sm-9" id="locationFeedback"></div>
             </div>
             <div class="form-group row justify-content-end">
-                <button class="btn btn-sm btn-outline-secondary" id="toggleLookupType">Lookup by <span id="lookupType">address</span>
+                <button class="btn btn-sm btn-outline-warn" id="toggleLookupType">Lookup by <span id="lookupType">address</span>
                     instead.
                 </button>
                 <button class="btn btn-sm btn-outline-primary" id="useCurrentLocation">Use my location</button>
