Latitude and longitude for address fix.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     </div>
                 </div><br>
                 <div class="row">
-                    <input class="form-control offset-sm-3 col-sm-9" data-lookup-type="useLatlon" id="location" placeholder="10.12345, -10.98765">
-                    <div class="offset-sm-3 col-sm-9" id="locationFeedback">Test</div>
+                    <input class="form-control offset-sm-3 col-sm-9" data-latitude="" data-longitude="" data-lookup-type="useLatlon" id="location" placeholder="10.12345, -10.98765">
+                    <div class="offset-sm-3 col-sm-9" id="locationFeedback"></div>
                 </div>
             </div>
             <div class="form-group row" id="radiusGroup">
