--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
             <legend>Build-a-zone</legend>
             <div class="form-group row" id="zoneNameGroup">
                 <label class="col-form-label col-sm-3" for="zoneName">Name</label>
-                <input class="form-control col-sm-9" id="zoneName" placeholder="Delivery Pad">
+                <input class="form-control col-sm-9" id="zoneName" placeholder="Location 1">
                 <div id="nameFeedback"></div>
             </div>
             <div class="form-group" id="locationGroup">
                 <div class="row">
                     <label class="col-form-label col-sm-3" for="location">Location</label>
                     <div class="btn-group btn-group-toggle col-sm-9" data-toggle="buttons">
-                        <label class="btn btn-warning active">
+                        <label class="btn btn-outline-warning active">
                             <input type="radio" name="loctype" id="useLatlon" autocomplete="off" > Latitude &
                             Longitude
                         </label>
-                        <label class="btn btn-warning">
+                        <label class="btn btn-outline-warning">
                             <input type="radio" name="loctype" id="useAddress" autocomplete="off"> Address
                         </label>
-                        <label class="btn btn-warning">
+                        <label class="btn btn-outline-warning">
                             <input type="radio" name="loctype" id="useGeoloc" autocomplete="off"> Use my location
                         </label>
                     </div>
