Add clear button for generated yaml

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         </div>
         <pre style="clear: both" id="generatedYaml"></pre>
     </div>
+    <button class="btn btn-danger" id="clearYamlBtn">Clear</button>
     <button class="btn btn-info" id="copyBtn">Copy</button>
     <button class="btn btn-primary" type="submit" id="downloadBtn">Download</button>
 </div>
